welcome.lessons.welcome.variables.RunFour.scala.code
var nb:Int=0
var quatre:Int=4
while(!estSurBiscuit)
{
	avance();
}
if (estSurBiscuit && nb=4);
{
	avance();
	nb=nb+1
}
